k8s-boot-demo/k8s/part-4/app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-boot-demo-v1-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: k8s-boot-demo-v1
  template:
    metadata:
      labels:
        app: k8s-boot-demo-v1
    spec:
      containers:
        - name: k8s-boot-demo-v1
          image: sivaprasadreddy/k8s-boot-demo:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          startupProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            initialDelaySeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-boot-demo-v1-service
spec:
  type: ClusterIP
  selector:
    app: k8s-boot-demo-v1
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080
